# dalive

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Linux_x86_64/: dalive
old_files/: CMakeLists.txt  days_alive.c  days_alive.h  main.c
src/: dalive.c  dalive.h  main.c
